--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,11 +2,9 @@
 owner: Ravichandra-C
 repo: HexpertsUptime
 sites:
-  - name: Google
-    url: https://www.google.com
   - name: Hexperts
     url: https://hexperts.hexagon.com
-    __dangerous__disable_verify_peer: true
+#     __dangerous__disable_verify_peer: true
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
