--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: HexpertsUptime
 sites:
   - name: Hexperts
     url: https://hexperts.hexagon.com
-    __dangerous__disable_verify_peer: true
+#     __dangerous__disable_verify_peer: true
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
